@@ -3,10 +3,10 @@
 #                                     or Lynx_Dir:lynx.cfg (VMS)
 #
 # $Format: "#PRCS LYNX_VERSION \"$ProjectVersion$\""$
-#PRCS LYNX_VERSION "2.8.6rel.1"
+#PRCS LYNX_VERSION "2.8.6rel.3"
 #
 # $Format: "#PRCS LYNX_DATE \"$ProjectDate$\""$
-#PRCS LYNX_DATE "Tue, 10 Oct 2006 17:15:23 -0700"
+#PRCS LYNX_DATE "Mon, 06 Nov 2006 17:27:15 -0800"
 #
 # Definition pairs are of the form  VARIABLE:DEFINITION
 # NO spaces are allowed between the pair items.
