@@ -1,6 +1,14 @@
 Changes since Lynx 2.8 release
 ===============================================================================
 
+2006-11-06 (2.8.6rel.3 from 2.8.7dev.2)
+* ensure that the configured values for PERSONAL_EXTENSION_MAP and
+  PERSONAL_MAILCAP are absolute pathnames -TD
+* modify logic for reading PERSONAL_EXTENSION_MAP and PERSONAL_MAILCAP to
+  ensure that they are files that are controlled only by the user.  The
+  default values for these allow lynx to read configuration information
+  from the user's current directory at lynx's startup (Debian #396949) -TD
+
 2006-10-12 (2.8.6rel.2)
 * update version numbers in documentation -TD
 * change embedded URL for HTML'ized lynx.cfg to point to example in current
